force-app/main/default/objects/Lender_Deal_to_Deal__c/Lender_Deal_to_Deal__c.object-meta.xml
<CustomObject>
    <label>Lender Deal to Deal</label>
    <nameField>
        <label>Lender Deal to Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lender Deal to Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>