force-app/main/default/objects/Lender_Deal_to_Deal__c/fields/Lender_Deal__c.field-meta.xml
<CustomField>
    <fullName>Lender_Deal__c</fullName>
    <label>Lender Deal</label>
    <referenceTo>Lender_Deal__c</referenceTo>
    <relationshipLabel>Lender Deal to Deals</relationshipLabel>
    <relationshipName>Lender_Deal_to_Deals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>