force-app/main/default/objects/Lender_Deal_to_Deal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>